--- a/web/Index.html
+++ b/web/Index.html
@@ -31,9 +31,9 @@
             </ul>
         </nav>
             <div>
-                <h1>Titulo</h1>
-                <h2>subtitulo</h2>
-                <button type="button" class="buttons">click here</button> 
+                <h1>Recicladores</h1>
+                <h2>Gestion, movilizacion y realizacion de proyectos por el medio ambiente</h2>
+                <button type="button" class="buttons">subscribete</button> 
                 <button type="button" class="buttons">click here</button>
             </div> 
         <script src="" async defer></script>
