--- a/web/contacto.html
+++ b/web/contacto.html
@@ -32,4 +32,9 @@
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
+        <ul>
+            <li>Correo: ReciclajeValparaisoPUCV@gmail.com</li>
+            <li>Telefono movil: +56 XXX-XXX-XXX<li>
+        </ul>
+    
         <script src="" async defer></script>
