--- a/web/porquere.html
+++ b/web/porquere.html
@@ -32,9 +32,28 @@
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
-
-        <
-
+        <article>
+            <img src="css/imagenes/5a038cd1dd55ba9ff959d394363a3e60.jpg" id="idea"></img>
+            <p>En el mundo se producen más de dos mil millones de toneladas de residuos al año, y si no se toman medidas relevantes se 
+            llegaran a más de tres mil millones el año 2050. El 12% de esto son plásticos, uno de los componentes con mayores problemas para
+            su aprovechamiento. Eh aquí donde necesitas las 3Rs, Reducir, Reutilizar y Reciclar. Por lo tanto nuestro comportamiento nos
+            lleva a la necesidad de introducir un consumo consciente y sostenible, para esto debo pensar por ejemplo ¿Lo necesito?. Otro 
+            punto importante es comprar considerando un uso largo del producto, con el objetivo de evitar estar gastando de más y desechando
+            rápidamente como lo hacemos actualmente. Finalmente podemos contribuir con el reciclaje de nuestro residuo entregándolo en los
+            puntos establecidos para ello y en las  condiciones específicas.</p>
+        </article>
+        <article class="articulo2">
+            <ul>
+                <li>¿Qué pasa si no reciclamos?</li>
+                <li>Aumento de la contaminación</li>
+                <li>Acumulación de basura</li>
+                <li>Incremento de los gases de efecto invernadero</li>
+                <li>Disminución de combustibles fósiles</li>
+                <li>Destrucción de hábitats naturales</li>
+                <li>Deforestación total</li>
+            </ul>
+            <img src="css/imagenes/47abcd18d50f98724840cf0ad80e97b8.jpg" id="desfirestacion"></img>
+        </article>
         <script src="" async defer></script>
     </body>
 </html>
