agregar paginas adicionales

--- a/web/ayudas.html
+++ b/web/ayudas.html
@@ -25,11 +25,26 @@
             <ul class="menu__nav">
                 <li><a href="porquere.html">Por qué reciclar</a></li>
                 <li><a href="ayudas.html">Ayudas y Consejos</a></li>
-                <li><a href="Index.html">
-                    <img src="iconos/1968595.svg" id="logo">
-                    </img></a></li>
+                <li><a href="Index.html"><img src="iconos/1968595.svg" id="logo"/></a></li>
                 <li><a href="cuenta.html">Cuenta</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
+        <p class="reciclaje">En esta sección se busca ayudar a nuestros visitantes dando ideas para reciclar algunos objetos comunes del dia a dia</p>
+        <ul class="images">
+            <li>
+                <img src="css/imagenes/reciclaje botellas.png"/>
+                <p>Ideas para reciclar botellas de vidrio</p>
+            </li>
+            <li>
+                <img src="css/imagenes/reciclaje sillas.png"/>
+                <p>Ideas para reciclar rollos de cables</p>
+            </li>
+            <li>
+                <img src="css/imagenes/mesas neumaticos.png"/>
+                <p>Ideas para reciclar neumaticos con desperfectos</p>
+            </li>
+        </ul>
         <script src="" async defer></script>
+    </body>
+</html>
