--- a/web/contacto.html
+++ b/web/contacto.html
@@ -32,9 +32,11 @@
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
-        <ul>
+        <ul class="informacion">
             <li>Correo: ReciclajeValparaisoPUCV@gmail.com</li>
             <li>Telefono movil: +56 XXX-XXX-XXX<li>
+            <li>Nombre: Reciclaje PUCV</li>
+            <li class="foto"><img src="css/imagenes/unknown.png" id="paisaje"/></li>
         </ul>
     
         <script src="" async defer></script>
