--- a/web/cuenta.html
+++ b/web/cuenta.html
@@ -25,11 +25,26 @@
             <ul class="menu__nav">
                 <li><a href="porquere.html">Por qué reciclar</a></li>
                 <li><a href="ayudas.html">Ayudas y Consejos</a></li>
-                <li><a href="Index.html">
-                    <img src="iconos/1968595.svg" id="logo">
-                    </img></a></li>
+                <li><a href="Index.html"><img src="iconos/1968595.svg" id="logo"/></a></li>
                 <li><a href="cuenta.html">Cuenta</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
+        <form>
+            <ul class="acceder">
+                <li>
+                    <label for="nombre">nombre de usuario</label>
+                    <input type="text" placeholder="nombre de usuario"/>
+                </li>
+                <li>
+                    <label for="contraseña">contraseña</label>
+                    <input type="contraseña" placeholder="ingrese contraseña">
+                </li>
+                <li>
+                    <input type="confirmar" value="aceptar">
+                </li>
+            </ul>
+        </form>
         <script src="" async defer></script>
+    </body>
+</html>
