arreglar img tag y cerrar contacto.html

--- a/web/contacto.html
+++ b/web/contacto.html
@@ -17,17 +17,15 @@
     <body>
         <nav class="menu">
             <ul class="menu__icons">
-                <li><img src="iconos/mail_white_24dp.svg" id="svg"></img></li>
-                <li><img src="iconos/facebook-svgrepo-com.svg" id="svg"></img></li>
-                <li><img src="iconos/instagram_f_icon-icons.com_65485.svg" id="svg"></img></li>
-                <li><img src="iconos/youtube-svgrepo-com.svg" id="svg"></img></li>
+                <li><img src="iconos/mail_white_24dp.svg" id="svg"/></li>
+                <li><img src="iconos/facebook-svgrepo-com.svg" id="svg"/></li>
+                <li><img src="iconos/instagram_f_icon-icons.com_65485.svg" id="svg"/></li>
+                <li><img src="iconos/youtube-svgrepo-com.svg" id="svg"/></li>
             </ul>
             <ul class="menu__nav">
                 <li><a href="porquere.html">Por qué reciclar</a></li>
                 <li><a href="ayudas.html">Ayudas y Consejos</a></li>
-                <li><a href="Index.html">
-                    <img src="iconos/1968595.svg" id="logo">
-                    </img></a></li>
+                <li><a href="Index.html"><img src="iconos/1968595.svg" id="logo"/></a></li>
                 <li><a href="cuenta.html">Cuenta</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
@@ -38,5 +36,6 @@
             <li>Nombre: Reciclaje PUCV</li>
             <li class="foto"><img src="css/imagenes/unknown.png" id="paisaje"/></li>
         </ul>
-    
         <script src="" async defer></script>
+    </body>
+</html>
