--- a/web/cuenta.html
+++ b/web/cuenta.html
@@ -17,10 +17,10 @@
     <body>
         <nav class="menu">
             <ul class="menu__icons">
-                <li><img src="iconos/mail_white_24dp.svg" id="svg"></img></li>
-                <li><img src="iconos/facebook-svgrepo-com.svg" id="svg"></img></li>
-                <li><img src="iconos/instagram_f_icon-icons.com_65485.svg" id="svg"></img></li>
-                <li><img src="iconos/youtube-svgrepo-com.svg" id="svg"></img></li>
+                <li><img src="iconos/mail_white_24dp.svg" id="svg"/></li>
+                <li><img src="iconos/facebook-svgrepo-com.svg" id="svg"/></li>
+                <li><img src="iconos/instagram_f_icon-icons.com_65485.svg" id="svg"/></li>
+                <li><img src="iconos/youtube-svgrepo-com.svg" id="svg"/></li>
             </ul>
             <ul class="menu__nav">
                 <li><a href="porquere.html">Por qué reciclar</a></li>
